# LinkLiberate

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  liberate.db  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  ci.yml  codeql.yml
src/link_liberate/: database.py  main.py  models.py  schema.py  utils.py
src/link_liberate/static/: styles.css
src/link_liberate/templates/: base.html  error400.html  index.html  liberate.html  showlibrate.html  web.html
tests/: test_main.py
