[project]
name = "LinkLiberate"
version = "0.1.0"
description = "A libre url shortner"
authors = [
    {name = "Kanishk Pachauri", email = "itskanishkp.py@gmail.com"},
    {name = "Abdul Samad Ansari", email = "asamadans@gmail.com"},
]
dependencies = [
    "fastapi[all]>=0.108.0",
    "jinja2>=3.1.2",
    "slowapi>=0.1.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm.scripts]
start = "uvicorn src.paste.main:app --host 0.0.0.0 --port 8080 --workers 4"
test = "pytest"
mypy = "mypy src/link_liberate"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "requests>=2.31.0",
]
lint = [
    "black>=23.12.1",
]
hooks = [
    "pre-commit>=3.6.0",
]
typing = [
    "mypy>=1.8.0",
]

[tool.ruff]
line-length = 160
exclude = ["data/*", ".git"]
